# pods.ptp.object-search.math-core

./: CMakeLists.txt  Makefile  README
lcmtypes/: math_core_dense_matrix_t.lcm  math_core_line_segment_t.lcm  math_core_line_t.lcm  math_core_nd_aabox_t.lcm  math_core_nd_direction_t.lcm  math_core_nd_point_t.lcm  math_core_nd_vector_t.lcm
src/: exception.hpp  extrema.cpp  extrema.cpp~  extrema.hpp  geom.cpp  geom.hpp  gsl_utils.cpp  gsl_utils.hpp  io.cpp  io.hpp  math_function.hpp  matrix.cpp  matrix.hpp  mpt.hpp  policy_number.hpp  polynomial.cpp  polynomial.hpp  polynomial_fit.cpp  polynomial_fit.hpp  roots.cpp  roots.hpp  types.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  test-extrema.cpp  test-math-function.cpp  test-policy-number.cpp  test-polynomial-fit.cpp  test-polynomial.cpp  test-projection.cpp  test-roots.cpp
